Revert "Fixed long word in input without spaces (reaching the end) not wrapping onto new line"
This reverts commit e95dc3e75679e279632dcc0c05ebd4f655401046.

--- a/src/styles/components/chat/_chat-prompt-wrapper.scss
+++ b/src/styles/components/chat/_chat-prompt-wrapper.scss
@@ -68,9 +68,8 @@
                     max-height: 20vh;
                     line-height: var(--mynah-line-height);
                     white-space: pre-wrap;
+                    word-break: normal;
                     overflow-wrap: break-word;
-                    word-break: break-all;
-                    word-wrap: break-word;
 
                     &:placeholder-shown {
                         text-overflow: ellipsis;
